--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-angular-templatecache": "~1.5.0",
     "gulp-autoprefixer": "~2.1.0",
     "gulp-bump": "^1.0.0",
+    "gulp-clean": "^0.3.1",
     "gulp-csso": "~1.0.0",
     "gulp-filter": "~2.0.2",
     "gulp-flatten": "~0.0.4",
@@ -33,6 +34,7 @@
     "gulp-rev-replace": "~0.3.1",
     "gulp-size": "~1.2.0",
     "gulp-sourcemaps": "~1.3.0",
+    "gulp-subtree": "^0.1.0",
     "gulp-tag-version": "^1.3.0",
     "gulp-uglify": "~1.1.0",
     "gulp-useref": "^1.1.2",
