--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {},
   "scripts": {
+    "deploy": "./deploy-ghpages.sh",
     "test": "gulp test"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "gulp-csso": "~1.0.0",
     "gulp-filter": "~2.0.2",
     "gulp-flatten": "~0.0.4",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-git": "^1.4.0",
     "gulp-if": "^1.2.5",
     "gulp-inject": "~1.1.1",
