--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ sudo: false
 language: node_js
 node_js:
   - '0.12'
-script: - bash deploy-ghpages.sh
+script:
+  - bash deploy-ghpages.sh
 env:
   global:
   - GH_REF: github.com/webcaetano/test-static.git
