--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: node_js
 node_js:
   - '0.12'
 script:
-  - bash deploy-ghpages.sh
+  - npm run-script travis
 env:
   global:
   - GH_REF: github.com/webcaetano/test-static.git
