--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "dependencies": {},
   "scripts": {
     "deploy": "./deploy-ghpages.sh",
-    "travis": "gulp travisDeploy",
+    "travis": "node node_modules/gulp/bin/gulp travisDeploy",
     "test": "gulp test"
   },
   "devDependencies": {
@@ -37,7 +37,6 @@
     "gulp-rev-replace": "~0.3.1",
     "gulp-size": "~1.2.0",
     "gulp-sourcemaps": "~1.3.0",
-    "gulp-subtree": "^0.1.0",
     "gulp-tag-version": "^1.3.0",
     "gulp-uglify": "~1.1.0",
     "gulp-useref": "^1.1.2",
