--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "deploy": "./deploy-ghpages.sh",
     "travis": "node node_modules/gulp/bin/gulp travisDeploy",
-    "test": "gulp test"
+    "test": "node node_modules/gulp/bin/gulp test"
   },
   "devDependencies": {
     "babel-loader": "^5.3.2",
