--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-angular-templatecache": "~1.5.0",
     "gulp-autoprefixer": "~2.1.0",
     "gulp-bump": "^1.0.0",
+    "gulp-cached": "^1.1.0",
     "gulp-clean": "^0.3.1",
     "gulp-csso": "~1.0.0",
     "gulp-filter": "~2.0.2",
@@ -32,6 +33,7 @@
     "gulp-load-plugins": "~0.8.0",
     "gulp-minify-html": "^1.0.0",
     "gulp-ng-annotate": "~0.5.2",
+    "gulp-remember": "^0.3.0",
     "gulp-replace": "~0.5.0",
     "gulp-rev": "~3.0.1",
     "gulp-rev-replace": "~0.3.1",
